# tautolomator

./: .gitignore  CMakeLists.txt  README.md  test
src/main/c/: gset.c  gset.h  logic.c  logic.h  main.c  parsing.h  resolution.c  resolution.h  set.c  set.h  utils.c  utils.h
